chore: Refactor project structure and reorganize files
   - Move Cogito related files to inferia directory
   - Delete Cogito directory
   - Remove unnecessary import statements from examples/example.py
   - Create new files for Inferia API handlers, CLI, core exceptions, and logging
   - Update .github/workflows/publish-to-pypi-and-test-pypi.yml to reflect changes in project name
   - Delete unnecessary files from cogito and inferia directories
   - Create a new file for Inferia core models

--- a/examples/usage.ipynb
+++ b/examples/usage.ipynb
@@ -12,7 +12,7 @@
    },
    "source": [
     "\n",
-    "from cogito import Application\n",
+    "from inferia import Application\n",
     "\n",
     "app = Application(\n",
     "        title=\"My Amazing Inferencing API\",\n",
